Fix withholding tax rates to comply with 2025 regulations
- Update interest WHT from 5% to 10% (effective April 1, 2025)
- Update dividend WHT from 14% to 15% (effective Jan 1, 2023)
- Remove Rs. 100,000 threshold for dividend tax (now applies to all amounts)
- Update UI labels to reflect correct rates

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     </div>
                     <div class="radio-option">
                         <input type="radio" id="interest" name="taxType" value="interest">
-                        <label for="interest" style="margin: 0;">Bank Interest Tax (5%)</label>
+                        <label for="interest" style="margin: 0;">Bank Interest Tax (10%)</label>
                     </div>
                     <div class="radio-option">
                         <input type="radio" id="dividend" name="taxType" value="dividend">
-                        <label for="dividend" style="margin: 0;">Dividend Tax (14% above Rs. 100,000)</label>
+                        <label for="dividend" style="margin: 0;">Dividend Tax (15%)</label>
                     </div>
                 </div>
             </div>
