feat: Add core styling, interactive elements, and initial withholding tax calculation logic to the tax calculator.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 <body>
     <div class="sidebar">
-        <div class="logo">TaxCalc LK</div>
+        <div class="logo">
+            TaxCalc LK
+            <button class="mobile-nav-toggle" onclick="toggleMobileMenu()">
+                <i class="fas fa-bars"></i>
+            </button>
+        </div>
 
 
 
@@ -285,8 +290,17 @@
 
             <div id="leasingResults"></div>
         </div>
-    </div>
 
+        <footer class="footer">
+            <p class="developed-by">Developed by GovSolve LTD</p>
+            <p class="disclaimer">This calculator is for <strong>informational purposes only</strong>. While every
+                effort
+                has been made to ensure accuracy based on the regulations effective April 1, 2025, tax laws can change.
+                Always consult with a qualified tax professional or the Department of Inland Revenue Sri Lanka for
+                official
+                advice.</p>
+        </footer>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 
